--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <script src="node_modules/es6-module-loader/dist/es6-module-loader-dev.js"></script>
   </head>
   <body>
+    <h4>kodlama.io with @engindemirog</h4>
+    <h5>Java Script Camp</h5>
       <script>
-          System.import('src/oop/index.js');
+          System.import('src/oop/functions.js');
       </script> 
   </body>
 </html>
