Day 3 Map Filter Reduce Part 1

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h4>kodlama.io with @engindemirog</h4>
     <h5>Java Script Camp</h5>
       <script>
-          System.import('src/oop/functions.js');
+          System.import('src/MapFilterReduce/app.js');
       </script> 
   </body>
 </html>
