--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="tr">
   <head>
     <title>JavaScript</title>
     <script src="node_modules/traceur/bin/traceur.js"></script>
@@ -8,7 +8,7 @@
     <h4>kodlama.io with @engindemirog</h4>
     <h5>Java Script Camp</h5>
       <script>
-          System.import('src/MapFilterReduce/app.js');
+          System.import('src/components/userComponent.js');
       </script> 
   </body>
 </html>
