--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <h4>kodlama.io with @engindemirog</h4>
     <h5>Java Script Camp</h5>
       <script>
-          System.import('src/components/userComponent.js');
+           System.import('src/components/userComponent.js');
+          //System.import('src/app.js');
       </script> 
   </body>
 </html>
